app/kubernetes/network-policies/client-namespace-nw-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-client-to-server
  namespace: client-endpoints
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: server-endpoints
      ports:
        - protocol: TCP
          port: 9222
