app/kubernetes/network-policies/server-namespace-nw-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-server-from-client
  namespace: server-endpoints
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: client-endpoints
      ports:
        - protocol: TCP
          port: 9222
